Fix NS-1348 Estado recibido oculto en mensajes recibidos multi adjuntos

--- a/app/src/main/res/layout/fragment_multiple_attachment_preview_video.xml
+++ b/app/src/main/res/layout/fragment_multiple_attachment_preview_video.xml
@@ -54,14 +54,14 @@
         style="@style/TextCountDownSelfDestruct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/normal_margin"
         android:padding="@dimen/x_small_padding"
         android:text="12:12"
+        android:layout_marginStart="@dimen/small_margin"
+        android:layout_marginTop="@dimen/xx_large_margin"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/frame_status"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/frame_status"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible"/>
 
     <FrameLayout
         android:id="@+id/frame_status"
