--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -175,6 +175,14 @@
                             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                             tools:listitem="@layout/home_fragment_item" />
 
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerView_contacts"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:visibility="gone"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/home_fragment_item" />
+
                     </LinearLayout>
 
                 </androidx.core.widget.NestedScrollView>
