--- a/app/src/main/res/values-it/subscription.xml
+++ b/app/src/main/res/values-it/subscription.xml
@@ -21,7 +21,7 @@
     <string name="text_unsubscribed_desc">Ricordate che è possibile iscriversi a un altro pacchetto che si adatta alle vostre esigenze in qualsiasi momento.</string>
     <string name="text_finalize">Finalizza</string>
     <string name="text_error_unsubscribe">Un errore annullando l\'abbonamento, riprovare più tardi si è verificato per favore.</string>
-    <string name="text_subscription_monthly">Mensile</string>
+    <string name="text_subscription_quarterly">Trimestrale</string>
     <string name="text_subscription_semiannual">Biennale</string>
     <string name="text_subscription_yearly">Annuale</string>
     <string name="text_purchase">Comprare %1$s (%2$s)</string>
