--- a/app/src/main/res/values/subscription.xml
+++ b/app/src/main/res/values/subscription.xml
@@ -21,7 +21,7 @@
     <string name="text_unsubscribed_desc">Remember that you can subscribe to another package that suits your needs at any time.</string>
     <string name="text_finalize">Finalize</string>
     <string name="text_error_unsubscribe">An error canceling your subscription, please try later occurred.</string>
-    <string name="text_subscription_monthly">Monthly</string>
+    <string name="text_subscription_quarterly">Quarterly</string>
     <string name="text_subscription_semiannual">Semiannual</string>
     <string name="text_subscription_yearly">Annual</string>
     <string name="text_purchase">Purchase %1$s (%2$s)</string>
